--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@types/uuid": "^9.0.2",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-get-random-values": "^1.9.0",
+    "react-native-svg": "^13.9.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -22,9 +28,10 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.6",
-    "@tsconfig/react-native": "^3.0.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.2",
     "@types/metro-config": "^0.76.3",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
@@ -32,7 +39,7 @@
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
