--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/uuid": "^9.0.2",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.1.1",
+    "redux-persist": "^6.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
